fix user medal change msg

--- a/public/index.html
+++ b/public/index.html
@@ -258,7 +258,7 @@
                     <DIV CLASS="endscreen-bg"></DIV>
                     <DIV CLASS="endscreen-inner">
                         <DIV CLASS="e-header" ID="e-header">You were defeated</DIV>
-                        <DIV CLASS="e-medal-change">
+                        <DIV CLASS="e-medal-change" ID="e-medal-change">
                             <IMG CLASS="e-medal-icon" SRC="./images/medal.png"> <SPAN ID="e-medals">+0 Medals</SPAN>
                         </DIV>
                         <DIV CLASS="e-stats"><SPAN ID="e-intro">You lost all your territories and were defeated!</SPAN> You had a max of <SPAN ID="e-troops">0</SPAN> troops and controlled a max of <SPAN ID="e-territories">0</SPAN> territories at your peak. You placed <SPAN ID="e-place">6th</SPAN> playing the <SPAN ID="e-map"></SPAN> map. <SPAN ID="e-ending">Better luck next time!</SPAN></DIV>
