disable webpage caching

--- a/public/user.html
+++ b/public/user.html
@@ -35,7 +35,7 @@
         <DIV CLASS="u-banner-container">
             <DIV CLASS="u-banner"></DIV>
             <DIV CLASS="u-banner-content">
-                <DIV CLASS="u-avatar-frame" STYLE="border: 5px solid red"><IMG CLASS="u-avatar-img" SRC="../images/defaultpfp.png"></DIV>
+                <DIV CLASS="u-avatar-frame" STYLE="border: 5px solid <%- playercolor %>; background: <%- playercolorbg %>"><IMG CLASS="u-avatar-img" SRC="../images/defaultpfp.png"></DIV>
                 <DIV CLASS="u-username-big"><%- username %></DIV>
             </DIV>
         </DIV>
