add settings back arrow

--- a/public/settings.html
+++ b/public/settings.html
@@ -34,6 +34,8 @@
         <SCRIPT TYPE="text/javascript" SRC="./js/colorData.js"></SCRIPT>
     </HEAD>
     <BODY>
+        
+        <BUTTON CLASS="u-back" ONCLICK="window.location.href='../'"><I CLASS="fa fa-chevron-left"></I></BUTTON>
         <DIV CLASS="s-main">
             <DIV CLASS="s-header"><I CLASS="fa fa-gear"></I> Settings</DIV>
             <DIV CLASS="s-user-profile">
