password confirmation form

--- a/public/login.html
+++ b/public/login.html
@@ -73,6 +73,8 @@
                                 <DIV CLASS="lbpc_row"><SPAN CLASS="pswd_check" ID="pswd_lower"><I CLASS="fa fa-times"></I></SPAN> at least 1 lowercase letter</DIV>
                                 <DIV CLASS="lbpc_row"><SPAN CLASS="pswd_check" ID="pswd_number"><I CLASS="fa fa-times"></I></SPAN> at least 1 number</DIV>
                             </DIV>
+                            <DIV CLASS="lg_container_title"><I CLASS="fa fa-check"></I> Confirm Password <SPAN CLASS="lb_form_error" ID="error-passwordconfirm"></SPAN></DIV>
+                            <INPUT CLASS="lg_input" ID="i-password-confirm" NAME="password" TYPE="password" PLACEHOLDER="Retype password here..." MAXLENGTH="30">
                             <DIV CLASS="lg_divider"></DIV>
                             <INPUT CLASS="lg_submit jb_green" ID="i-submit" TYPE="Submit" ONCLICK="submitRegister()" VALUE="Register">
                         </FORM>
