start xp level framework

--- a/public/user.html
+++ b/public/user.html
@@ -29,6 +29,7 @@
 
         <link rel="icon" href="../images/icon.png">
         <SCRIPT TYPE="text/javascript" SRC="../js/userprofile.js"></SCRIPT>
+        <SCRIPT TYPE="text/javascript" SRC="../js/xpLevelCalc.js"></SCRIPT>
     </HEAD>
     <BODY>
         <BUTTON CLASS="u-back" ONCLICK="window.location.href='../'"><I CLASS="fa fa-chevron-left"></I></BUTTON>
