--- a/public/index.html
+++ b/public/index.html
@@ -40,6 +40,7 @@
         <SCRIPT TYPE="text/javascript" SRC="./js/mapper.js"></SCRIPT>
         <SCRIPT TYPE="text/javascript" SRC="./js/tutorialslide.js"></SCRIPT>
         <SCRIPT TYPE="text/javascript" SRC="./js/mapdescriptions.js"></SCRIPT>
+        <SCRIPT TYPE="text/javascript" SRC="../js/xpLevelCalc.js"></SCRIPT>
 
         <TITLE>Emblitz | Multiplayer Strategy Game</TITLE>
     </HEAD>
