--- a/public/index.html
+++ b/public/index.html
@@ -146,7 +146,7 @@
                         <DIV STYLE="color: var(--medium); font-size: 16px; padding-bottom: 5px;">Advertisement</DIV>
                         <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6720539950929131"
                             crossorigin="anonymous"></script>
-                        <!-- right banner ad 1 -->
+                        <!-- right banner ad 1 
                         <ins class="adsbygoogle"
                             style="display:block"
                             data-ad-client="ca-pub-2859288291436441"
@@ -156,7 +156,7 @@
                         </ins>
                         <script>
                             (adsbygoogle = window.adsbygoogle || []).push({});
-                        </script>
+                        </script> -->
 
                     </DIV>
                 </DIV>
@@ -198,7 +198,7 @@
             <DIV CLASS="wideadcontainer">
                 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6720539950929131"
                     crossorigin="anonymous"></script>
-                <!-- lobby ad 1 -->
+                <!-- lobby ad 1 
                 <ins class="adsbygoogle"
                     style="display:block"
                     data-ad-client="ca-pub-2859288291436441"
@@ -209,7 +209,7 @@
                     window.addEventListener("load", function() {
                         (adsbygoogle = window.adsbygoogle || []).push({});
                     });
-                </script>
+                </script> -->
             </DIV>
 
         </DIV>
