--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
         </script>
 
         <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2859288291436441"
-        crossorigin="anonymous" onerror="detectAdBlock()"></script>
+        crossorigin="anonymous"></script>
         
         <link rel="icon" href="./images/icon.png">
 
