new territory progress bar

--- a/public/index.html
+++ b/public/index.html
@@ -210,7 +210,9 @@
                         <DIV CLASS="s-troops"><I CLASS="fa fa-male"></I> <SPAN ID="s-troops">0</SPAN> Troops</DIV>
                         <DIV CLASS="s-territories"><I CLASS="fa fa-map-marker"></I> <SPAN ID="s-territories">0</SPAN>/<SPAN ID="s-totalterritories">0</SPAN> Territories</DIV>
                         <DIV CLASS="s-territories-label">Territories captured:</DIV>
-                        <DIV CLASS="s-territories-bar"><DIV ID="territoryprogress" CLASS="s-territories-bar-inner"></DIV></DIV>
+                        <DIV CLASS="s-territories-bar" ID="s-tb-container">
+                            <DIV ID="territoryprogress" CLASS="s-territories-bar-inner"></DIV>
+                        </DIV>
                     </DIV>
                 </DIV>
                 <DIV CLASS="leavegame">
