add instagram link to home page + images

--- a/public/index.html
+++ b/public/index.html
@@ -42,6 +42,7 @@
         <SCRIPT TYPE="text/javascript" SRC="./js/mapdescriptions.js"></SCRIPT>
         <SCRIPT TYPE="text/javascript" SRC="../js/xpLevelCalc.js"></SCRIPT>
         <SCRIPT TYPE="text/javascript" SRC="../js/loadingScreen.js"></SCRIPT>
+        <SCRIPT TYPE="text/javascript" SRC="../js/powerups.js"></SCRIPT>
 
         <TITLE>Emblitz | Multiplayer Strategy Game</TITLE>
     </HEAD>
@@ -74,6 +75,10 @@
                 <DIV CLASS="socials-discord">
                     <DIV CLASS="socials-header">Join our Discord!</DIV>
                     <A HREF="https://discord.gg/SVcahqGxQD" TARGET="_blank" REL="nofollow"><IMG SRC="./images/discord.png" CLASS="socials-icon"></A>
+                </DIV>
+                <DIV CLASS="socials-instagram">
+                    <DIV CLASS="socials-header">Game news on Instagram</DIV>
+                    <A HREF="https://www.instagram.com/alex.z.404" TARGET="_blank" REL="nofollow"><IMG SRC="./images/instagram.png" CLASS="socials-icon"></A>
                 </DIV>
             </DIV>
             <DIV CLASS="homeguicontainer">
@@ -130,9 +135,15 @@
                             <BR>
                         </DIV>
                         <A HREF="./tutorial" TARGET="_blank" CLASS="ltp-link" STYLE="font-size: 20px">Game Tutorial</A> | <A HREF="./privacy" TARGET="_blank" CLASS="ltp-link" STYLE="font-size: 20px">Privacy Policy</A><BR><BR>
+                        <!-- discord -->
                         <DIV CLASS="mobile-socials">
                             <DIV CLASS="socials-header">Join our Discord!</DIV>
                             <A HREF="https://discord.gg/SVcahqGxQD" TARGET="_blank" REL="nofollow"><IMG SRC="./images/discord.png" CLASS="socials-icon"></A><BR><BR>
+                        </DIV>
+                        <!-- instagram -->
+                        <DIV CLASS="mobile-socials">
+                            <DIV CLASS="socials-header">Game news on Instagram</DIV>
+                            <A HREF="https://www.instagram.com/alex.z.404" TARGET="_blank" REL="nofollow"><IMG SRC="./images/instagram.png" CLASS="socials-icon"></A><BR><BR>
                         </DIV>
                     </DIV>
                 </DIV>
