--- a/public/index.html
+++ b/public/index.html
@@ -238,6 +238,14 @@
                     <DIV CLASS="togglelb-bg"></DIV>
                     <DIV ID="togglelb-inner"><I CLASS="fa fa-angle-double-left"></I></DIV>
                 </DIV>
+                <!-- powerups bar -->
+                <DIV CLASS="powerupbar">
+                    <BUTTON CLASS="powerup-btn" ONCLICK="airlift()">
+                        <DIV CLASS="powerup-btn-bg"></DIV>
+                        <DIV CLASS="powerup-recharge"></DIV>
+                        <IMG SRC="./images/assets/airlifticon.svg">
+                    </BUTTON>
+                </DIV>
                 <DIV CLASS="endscreen" ID="endscreen">
                     <DIV CLASS="endscreen-bg"></DIV>
                     <DIV CLASS="endscreen-inner">
