add plane animation sync

--- a/public/index.html
+++ b/public/index.html
@@ -259,7 +259,7 @@
                 </DIV>
             </DIV>
             <DIV CLASS="mapcontainer" STYLE="transform: scale(1)" ID="mapcontainer">
-                <DIV ID="map" STYLE="transform: translate(0px, 0px);"><DIV ID="svg-map-bg" class="svg-map-bg"><DIV ID="mapl2"></DIV><DIV ID="maploading"><DIV STYLE="font-size: 22px; font-weight: bold; color: #ffffff">Loading...</DIV></DIV></DIV></DIV>
+                <DIV ID="map" STYLE="transform: translate(0px, 0px);"><DIV ID="svg-map-bg" class="svg-map-bg"><DIV ID="mapl2"></DIV><DIV ID="mapl1"></DIV><DIV ID="maploading"><DIV STYLE="font-size: 22px; font-weight: bold; color: #ffffff">Loading...</DIV></DIV></DIV></DIV>
             </DIV>
         </DIV>
     </BODY>
