add airlift powerup

--- a/public/index.html
+++ b/public/index.html
@@ -240,7 +240,7 @@
                 </DIV>
                 <!-- powerups bar -->
                 <DIV CLASS="powerupbar">
-                    <BUTTON CLASS="powerup-btn" ONCLICK="airlift()">
+                    <BUTTON CLASS="powerup-btn" ID="airlift-powerup" ONCLICK="airlift()">
                         <DIV CLASS="powerup-btn-bg"></DIV>
                         <DIV CLASS="powerup-recharge"></DIV>
                         <IMG SRC="./images/assets/airlifticon.svg">
